[gd_scene load_steps=8 format=3 uid="uid://dxywyh2v0bi41"]

[ext_resource type="Script" path="res://scenes and scripts/gun.gd" id="1_8gcmq"]
[ext_resource type="PackedScene" uid="uid://cwi2nhewkrqi0" path="res://scenes and scripts/bullet.tscn" id="2_f67ao"]
[ext_resource type="Texture2D" uid="uid://j41okkrha2eh" path="res://assets/glock.png" id="3_87kxa"]
[ext_resource type="Texture2D" uid="uid://cca2qplnkoxhf" path="res://assets/firing_effect.png" id="3_qypym"]

[sub_resource type="Animation" id="Animation_veco2"]
resource_name = "FiringAnimation"
length = 0.05
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Gun/FiringEffect:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0001, 0.05),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Gun/FiringEffect:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.05, 0.9)]
}

[sub_resource type="Animation" id="Animation_alo3w"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Gun/FiringEffect:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Gun/FiringEffect:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.35, 0.9)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ljhu3"]
_data = {
"FiringAnimation": SubResource("Animation_veco2"),
"RESET": SubResource("Animation_alo3w")
}

[node name="Gun" type="Node2D"]
script = ExtResource("1_8gcmq")
Bullet = ExtResource("2_f67ao")

[node name="Sprite2D" type="Sprite2D" parent="."]
rotation = 4.71239
texture = ExtResource("3_87kxa")

[node name="EndOfGun" type="Marker2D" parent="."]
position = Vector2(19.0001, 8.7738e-05)

[node name="AttackCooldown" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="FiringEffect" type="Sprite2D" parent="."]
visible = false
position = Vector2(27.0001, 8.7738e-05)
rotation = -1.5708
texture = ExtResource("3_qypym")

[node name="FiringAnimation" type="AnimationPlayer" parent="."]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_ljhu3")
}
